--- a/config/database.yml
+++ b/config/database.yml
@@ -4,9 +4,14 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: test
   pool: 5
+  username: root
+  password: cloud2014
+  host: localhost
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
